<resources>
    <string name="app_name">Time Sheets</string>
    <string name="action_time_sheets">Time Sheets</string>
    <string name="category_hint">Category</string>
    <string name="subcategory_hint">Project</string>
    <string name="comment_hint">Comment…</string>
    <string name="action_overview">Overview</string>
    <string name="recent_label">Recent:</string>
    <string name="items_hint">items…</string>
    <string name="most_used_label">Most used:</string>
    <string name="start_label">Start</string>
    <string name="stop_label">Stop</string>
    <string name="category_label">Categories:</string>
    <string name="task_label">Task</string>
    <string name="subcategory_label">Projects:</string>
    <string name="dash">-</string>
    <string name="action_main">Timer</string>
    <string name="category_header">Category</string>
    <string name="subcategory_header">Project</string>
    <string name="comment_header">Description</string>
    <string name="start_date_header">Started</string>
    <string name="end_date_header">End</string>
    <string name="date_hint">8.5.2020 10:30</string>
    <string name="description_hint">Implementierung von ganz vielen lustigen Sachen</string>
    <string name="spent_header">Spent</string>
    <string name="duration">Duration</string>
    <string name="save_changes">Save Changes</string>
    <string name="reset_data">Reset Data</string>
</resources>
