<?xml version="1.0" encoding="utf-8"?>

<TableRow android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/start_date_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_hint"
        android:hint="@string/date_hint"
        android:autofillHints="DateTime"
        android:inputType="datetime"
        android:background="@color/text_background_enabled"
        android:layout_margin="5dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/duration_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2 h"
        android:hint="@string/duration"
        android:autofillHints="Duration"
        android:inputType="text"
        android:background="@color/text_background_enabled"
        android:layout_margin="5dp"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/category_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Arbeit"
        android:inputType="text"
        android:hint="@string/category_hint"
        android:autofillHints="@string/category_hint"
        android:background="@color/text_background_enabled"
        android:layout_margin="5dp"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/subcategory_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="datahike"
        android:hint="@string/subcategory_hint"
        android:autofillHints="@string/subcategory_hint"
        android:inputType="text"
        android:background="@color/text_background_enabled"
        android:layout_margin="5dp"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/comment_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        android:inputType="text"
        android:text="Implementierung von ganz vielen lustigen Sachen"
        android:hint="@string/comment_hint"
        android:autofillHints="@string/comment_hint"
        android:background="@color/text_background_enabled"
        android:layout_margin="5dp"
        android:textSize="16sp" />

</TableRow>