<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/input_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:paddingTop="60dp"
        android:weightSum="3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/category_listings">

        <TextView
            android:id="@+id/task_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_label"
            android:layout_margin="5dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/category_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/category_hint"
            android:autofillHints="@string/category_hint"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/rounded_corner_enabled"/>

        <EditText
            android:id="@+id/subcategory_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/subcategory_hint"
            android:autofillHints="@string/subcategory_hint"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/rounded_corner_enabled" />


        <EditText
            android:id="@+id/comment_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/comment_hint"
            android:autofillHints="@string/comment_hint"
            android:inputType="text|textMultiLine"
            android:minLines="3"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/rounded_corner_enabled" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_listings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/input_form"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/category_recommendations">

        <LinearLayout
            android:id="@+id/category_listing"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_label"
                android:textSize="16sp" />
            <ListView
                android:id="@+id/category_list"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:divider="@null"
                android:smoothScrollbar="true"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/subcategory_listing"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/subcategory_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subcategory_label"
                android:textSize="16sp" />

            <ListView
                android:id="@+id/subcategory_list"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:divider="@null"
                android:smoothScrollbar="true"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_recommendations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/input_form"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/timer">

        <LinearLayout
            android:id="@+id/recent_listing"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/recent_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent_label"
                android:textSize="16sp" />

            <ListView
                android:id="@+id/recent_list"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:hint="@string/items_hint"
                android:divider="@null"
                android:smoothScrollbar="true"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/popular_listing"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/popular_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/most_used_label"
                android:textSize="16sp"/>

            <ListView
                android:id="@+id/popular_list"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:hint="@string/items_hint"
                android:divider="@null"
                android:smoothScrollbar="true"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
        </LinearLayout>

    </LinearLayout>

    <Chronometer
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@+id/category_recommendations"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/start_stop_button" />


    <Button
        android:id="@+id/start_stop_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/start_label"
        android:onClick="onStartStopButtonPressed"
        android:background="@color/startGreen"
        android:paddingVertical="30dp"
        app:layout_constraintTop_toBottomOf="@+id/timer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>